# buildings

./: .gitignore  Makefile  README.md  notebook.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
buildings/: .gitignore  README.md  __init__.py  _make_index.py  buildings.py  cli.py
src/: README.md  buildings.py  split_states.py
src/buildings/: __init__.py  _find_county.py  _make_index.py  buildings.py  cli.py
