[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
loads = ["*.py"]

[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src/buildings"]

[project]
name = "buildings"
version = "0.0.0"
description = "US electric load model"
authors = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
maintainers = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
readme = "README.md"
keywords = ["github","python","US","building","inventory"]
license = {text="MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    ]
dynamic=["dependencies"]

[project.urls]
Homepage = "https://github.com/eudoxys/buildings"
Documentation = "https://www.eudoxys.com/buildings"
Repository = "https://github.com/eudoxys/buildings.git"
Issues = "https://github.com/eudoxys/buildings/issues"

[project.scripts]
buildings = "buildings.cli:main"